--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ nav {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  padding: 0px 10px;
+  padding: 24px 10px 0px 10px;
   margin: 0px;
 }
 
@@ -54,7 +54,7 @@ nav {
 }
 
 #title-animation-container {
-  padding: 24px 6px 6px 6px;
+  padding: 6px 6px 6px 6px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -192,7 +192,16 @@ nav {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
+  padding: 8px;
   border: 1px dashed var(--darkgray);
+  font-size: 1.5rem;
+  hyphens: none;
+  text-align: justify;
+}
+
+#player-contents-container p {
+  hyphens: none;
 }
 
 img {
@@ -242,10 +251,77 @@ img {
 .details-item {
   font-size: small;
   min-height: 1.2rem;
+  hyphens: none;
+}
+
+.details-item p {
+  hyphens: none;
 }
 
 .details-item.empty::before {
   content: "empty placeholder";
   color: var(--darkgray);
   font-style: italic;
+}
+
+#connections-list-container {
+  display: none;
+}
+
+#connections-list-container.visible {
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 60%;
+  height: 60%;
+  z-index: 10;
+}
+
+#connections-list-container-hide-button {
+  cursor: pointer;
+  height: 20px;
+  width: 20px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+#connections-list {
+  list-style: none;
+  padding-right: 40px; /* to account for default list padding-left */
+}
+
+#connections-list li {
+  cursor: pointer;
+  padding: 12px 0;
+  border-bottom: 1px solid var(--darkgray);
+}
+
+#connections-container {
+  display: flex;
+  align-items: center;
+}
+
+#connection-name-input {
+  padding-right: 8px;
+}
+
+#save-connection-button {
+  cursor: pointer;
+  width: 20px;
+  height: 20px;
+}
+
+#load-connections-button {
+  cursor: pointer;
+  width: 24px;
+  height: 24px;
+}
+
+#delete-connection-button {
+  cursor: pointer;
+  width: 19px;
+  height: 19px;
 }
