--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,6 @@
 html {
   scroll-behavior: smooth;
   width: 100vw;
-  height: 100vh;
-  overflow: hidden;
   box-sizing: border-box;
 }
 
@@ -25,7 +23,6 @@ body {
   margin: 0;
   padding: 0;
   width: 100%;
-  max-height: 100%;
   font-family: "Sligoil", Helvetica, Arial, sans-serif;
   display: flex;
   flex-direction: column;
@@ -124,14 +121,15 @@ button {
 
 #main-container {
   flex: 1;
-  overflow-y: hidden;
   display: grid;
-  grid-template-rows: 1fr 2fr 1fr;
+  grid-template-rows: 1fr minmax(120px, 0.5fr) 1fr;
+  grid-template-areas: "player" "info" "contents";
   gap: 0.5rem;
   padding: 1rem;
 }
 
 #media-input {
+  grid-area: contents;
   border: 1px dashed var(--darkgray);
   width: 100%;
   overflow-x: auto;
@@ -156,7 +154,7 @@ button {
 }
 
 #player-container {
-  aspect-ratio: 16/9;
+  aspect-ratio: 9/16;
   z-index: 0;
   position: relative;
 }
@@ -197,7 +195,7 @@ button {
 }
 
 #player-contents-container {
-  aspect-ratio: 16/9;
+  aspect-ratio: 9/16;
   z-index: 0;
   display: flex;
   flex-direction: column;
@@ -221,9 +219,9 @@ img {
 }
 
 #playlist-contents-container {
-  overflow-x: auto;
-  display: flex;
-  flex-direction: row;
+  overflow-y: auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
   gap: 0.5rem;
 }
 
