--- a/css/style.css
+++ b/css/style.css
@@ -259,6 +259,8 @@ img {
 }
 
 #details-container {
+  display: flex;
+  flex-direction: column;
   max-height: 100%;
   overflow-y: auto;
   padding: 0 6px;
@@ -266,6 +268,7 @@ img {
 }
 
 .details-item {
+  flex: 1;
   font-size: small;
   min-height: 1.2rem;
   hyphens: none;
