--- a/css/style.css
+++ b/css/style.css
@@ -173,6 +173,26 @@ button {
   pointer-events: none;
 }
 
+#player-progress-container {
+  z-index: 10;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 48px;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+#player-progress-element {
+  color: var(--dark);
+  background-color: var(--dark);
+  height: 4px;
+  width: 0%;
+}
+
 #player-play-button {
   display: block;
   z-index: 10;
