--- a/css/neomorphism.css
+++ b/css/neomorphism.css
@@ -9,6 +9,10 @@
 
   border: solid 1px var(--highlight);
 
+  --shadow-color: color-mix(in srgb, var(--darkgray), transparent 90%);
+
   /* box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px; */
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  box-shadow: var(--shadow-color) 0px 6px 7px 1px,
+    var(--shadow-color) 0px -1px 0px 0px, var(--shadow-color) -3px 0px 4px 1px,
+    var(--shadow-color) 3px 0px 4px 1px;
 }
