--- a/css/neomorphism.css
+++ b/css/neomorphism.css
@@ -5,14 +5,15 @@
 #player-contents-container {
   border: none;
   border-radius: 12px;
-  background-color: rgb(255 255 255 / 65%);
+  --color: color-mix(in srgb, var(--darkgray), transparent 100%);
+  background-color: var(--color);
 
   border: solid 1px var(--highlight);
 
   --shadow-color: color-mix(in srgb, var(--darkgray), transparent 90%);
 
   /* box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px; */
-  box-shadow: var(--shadow-color) 0px 6px 7px 1px,
+  box-shadow: var(--shadow-color) 0px 6px 7px 6px,
     var(--shadow-color) 0px -1px 0px 0px, var(--shadow-color) -3px 0px 4px 1px,
     var(--shadow-color) 3px 0px 4px 1px;
 }
